<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
>
    <Button
        android:onClick="WaterRipples"
        android:text="@string/water_ripples_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="Expose"
        android:text="@string/Expose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="Operational"
        android:text="@string/operational_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="CurveMovement"
        android:text="@string/curve_movement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:onClick="ViewChange"
        android:text="@string/view_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
